# flip-phone

./: .gitignore  AGENTS.md  README.md  check_desc.py
.devin/rules/: batch-edits.md  doc-maintain.md
docs/: block-diagram.md  bom.md  constraints.md  feature-wishlist.md  problem-definition.md  project-log.md  requirements.md  research-notes.md  ui-design.md
docs/reference/: README.md
docs/revisit-prompts/: README.md  codec-audio-path-revisit.md  display-decision.md  parts-sourcing-revisit.md  zephyr-usb-hs-ulpi-revisit.md
docs/revisit-prompts/archive/: codec-audio-path-revisit.md  display-decision.md  modem-revisit.md  zephyr-usb-hs-ulpi-revisit.md
firmware/: CMakeLists.txt  app.overlay  prj.conf
firmware/src/: main.c
firmware/src/fonts/: jetbrainsmono_10.c  jetbrainsmono_14.c  jetbrainsmono_22.c
pcb/: .gitignore  JLCPCB_BOM.xls  PARTS_TRACKING.md
pcb/phone/: fp-lib-table  main.kicad_sch  modem_lga.kicad_sch  modem_mpcie.kicad_sch  phone.kicad_pro  phone.kicad_sch  sym-lib-table
pcb/phone/lib/: AGENTS.md  connectors.kicad_sym  easyeda2kicad.kicad_sym  electromech.kicad_sym  extract_pins.py  ics.kicad_sym  missing_parts.kicad_sym  passives.kicad_sym  rebuild_lib.py  update_sch_refs.py  verify_lib.py
pcb/phone/lib/easyeda2kicad.3dshapes/: ANT-SMD_UFL-R-SMT-1-10.step  ANT-SMD_UFL-R-SMT-1-10.wrl  FPC-SMD_12P-P0.50_HDGC_0.5K-HX-12PWB.step  FPC-SMD_12P-P0.50_HDGC_0.5K-HX-12PWB.wrl  FPC-SMD_8P-P0.50_HDGC_0.5K-HX-8PWB.step  FPC-SMD_8P-P0.50_HDGC_0.5K-HX-8PWB.wrl  LED0603-RD.wrl  TF-SMD_472192001.step  (+13 more)
scripts/: activate-zephyr.ps1
ui-mockup/: index.html
(+29 files in other folders)
